# 3d_Modeling_withAI

./: COURSE_MATERIALS_GUIDE.md  Prompt_template_sys_prompt.md  README.md  TEACHING_GUIDE.md
prompt_generation/: .env.example  README.md  generate_prompts.py  pyproject.toml
prompt_generation/configs/: _template.yaml  aethel.yaml
prompt_generation/src/: stage1_base_prompts.py  stage4_image_generation.py  stage5_hunyuan3d.py
prompt_generation/src/providers/: __init__.py  tencent_cos.py
