[project]
name = "prompt-generation"
version = "1.0.0"
description = "AI character prompt generator for 2D→3D pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "google-genai>=1.0.0",
    "Pillow>=10.0.0",
]

[project.scripts]
generate-prompts = "generate_prompts:app"
